Desktop version complete

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <img src="images/icon-star.svg" alt="">
           </span>
           <p>Rated 5 Stars in BestTech</p>
-        </span>
-      </div>
-    </div> 
+         </span>
+        </div>
+      </div> 
   
       <div class="text-cards">
         <div id="text-card-1">
@@ -108,6 +108,7 @@
     
   </body>
 
+  <!--Log screen size for responsive design-->
   <script>
     const width = window.innerWidth
 
