--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/ashleypean">Ashley Pean</a>.
+      >. Coded by <a href="https://github.com/ashleypean" target = "_blank">Ashley Pean</a>.
     </div>
     
   </body>
